--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -81,17 +81,14 @@
     rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px,
     rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
 }
-
 #sections {
-  margin-top: 85px;
-  /* padding: 100px 50px; */
   width: 100%;
   height: 100vh;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
 }
-#sildes {
-  width: 1000px;
+#slides {
+  width: 400px;
   height: 100vh;
   display: flex;
   align-items: center;
